In a working state

--- a/McElhenney-Assign09.ipynb
+++ b/McElhenney-Assign09.ipynb
@@ -15,9 +15,7 @@
    "source": [
     "# 2. Describe the agent in the Nim learning model.\n",
     "\n",
-    "Our agent is a Q-Learning agent. This agent uses a table (*qtable*) of expected payoffs to make \"educated\" guesses about which stack to pull objects out of based on the highest expected reward (*a*) based on the current state of the environment. The number of items pulled (*move*) is equal to a modulo of the expected payoff by the maximum number of states of a stack. The stack pulled from (*pile*) is determined by an integer division of the payoff (*a*) by the maximum number of items in a stack.\n",
-    "\n",
-    "To be honest I'm a little confused as to why/how the stack selection works as it seems that it is more or less random which stack it tries to pull objects from (based on reward function not truly random, but still).\n",
+    "Our agent is a Q-Learning agent. This agent uses a table (*qtable*) of expected payoffs to make \"educated\" guesses about which stack to pull objects out of based on the highest expected reward based on the current state of the environment. The number of items pulled (*move*) is equal to a modulo of the index of the highest reward (*a*) by the maximum number of states of a stack, The stack pulled from (*pile*) is determined by an integer division of the index of the highest reward (*a*) by the maximum number of items in a stack.\n",
     "\n",
     "If this procedure produces an illegal move then the agent will instead make a random legal move. "
    ]
@@ -26,7 +24,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. Describe the reward and penalty in the Nim learning model."
+    "# 3. Describe the reward and penalty in the Nim learning model.\n",
+    "\n",
+    "In this model, reward/penalty is determined by the function $\\alpha * (reward + \\gamma * q'_{best})$. In this equation, $\\alpha$ adjust the gain for the learning function, $reward$ is gives a large boost to moves that result in a win, and the $\\gamma *q'_{best}$ term assures that all legal moves get at least some reward (but less than a win). The $q'_{best}$ term also means that the model won't be able to learn moves until after a game has been won, as that is the only way to set any of the terms in *qtable* above zero (*qtable* is zeroed out at the beginning of the learning function).\n",
+    "\n",
+    "Actions of the default qlearner:\n",
+    "\n",
+    "* Win: $reward = 100$; $q'_{best}$ set to 0. Sets a move as the correct one for a win.\n",
+    "* Legal Move: $reward = 0$. Makes this move a fraction ($\\gamma$) of the best move for that state.\n",
+    "* Loss: No special action."
    ]
   },
   {
@@ -55,7 +61,7 @@
    "source": [
     "# 6. Find a way to improve the provided Nim game learning model\n",
     "\n",
-    "Code taken from module 9 notebook."
+    "Code taken/adapted from module 9 notebook."
    ]
   },
   {
@@ -65,12 +71,20 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "from functools import partial\n",
+    "from itertools import product\n",
+    "from os import mkdir, path\n",
     "from random import randint, choice\n",
     "\n",
     "# The number of piles is 3\n",
     "\n",
     "# max number of items per pile\n",
     "ITEMS_MX = 10\n",
+    "\n",
+    "# accomadate multiple logs\n",
+    "log_path = './logs/'\n",
+    "if not path.isdir(log_path):\n",
+    "    mkdir(log_path)\n",
     "\n",
     "# Initialize starting position\n",
     "def init_game():\n",
@@ -99,26 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def default_nim_qlearner(_st):\n",
-    "    # pick the best rewarding move, equation 1\n",
-    "    a = np.argmax(qtable[_st[0], _st[1], _st[2]])  # exploitation\n",
-    "    # index is based on move, pile\n",
-    "    move, pile = a%ITEMS_MX+1, a//ITEMS_MX\n",
-    "    \n",
-    "    # check if qtable has generated a random but game illegal move - we have not explored there yet\n",
-    "    if move <= 0 or _st[pile] < move:\n",
-    "        move, pile = nim_random(_st)  # exploration\n",
-    "    #\n",
-    "    return move, pile  # action"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Engines = {'Random':nim_random, 'Guru':nim_guru, 'DQlearner':default_nim_qlearner}\n",
+    "Engines = {'Random':nim_random, 'Guru':nim_guru}\n",
     "\n",
     "def game(a, b):\n",
     "    state, side = init_game(), 'A'\n",
@@ -138,105 +133,22 @@
     "    for i in range(_n):\n",
     "        wins[game(a, b)] += 1\n",
     "    # info\n",
-    "    print(f\"{_n} games, {a:>8s} {wins['A']}   {b:>8s} {wins['B']}\")\n",
+    "    print(f\"{_n} games, {a:>13s} vs. {b:>13s}, {a} Winrate: {100 * wins['A'] / (wins['A'] + wins['B']):.2f}%\")\n",
     "    #\n",
     "    return wins['A'], wins['B']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "qtable, Alpha, Gamma, Reward = None, 1.0, 0.8, 100.0\n",
-    "\n",
-    "# learn from _n games, randomly played to explore the possible states\n",
-    "def nim_qlearn(_n):\n",
-    "    global qtable\n",
-    "    # based on max items per pile\n",
-    "    qtable = np.zeros((ITEMS_MX+1, ITEMS_MX+1, ITEMS_MX+1, ITEMS_MX*3), dtype=float)\n",
-    "    # play _n games\n",
-    "    for i in range(_n):\n",
-    "        # first state is starting position\n",
-    "        st1 = init_game()\n",
-    "        while True:  # while game not finished\n",
-    "            # make a random move - exploration\n",
-    "            move, pile = nim_random(st1)\n",
-    "            st2 = list(st1)\n",
-    "            # make the move\n",
-    "            st2[pile] -= move  # --> last move I made\n",
-    "            if st2 == [0, 0, 0]:  # game ends\n",
-    "                qtable_update(Reward, st1, move, pile, 0)  # I won\n",
-    "                break  # new game\n",
-    "            #\n",
-    "            qtable_update(0, st1, move, pile, np.max(qtable[st2[0], st2[1], st2[2]]))\n",
-    "            st1 = st2\n",
-    "\n",
-    "# Equation 3 - update the qtable\n",
-    "def qtable_update(r, _st1, move, pile, q_future_best):\n",
-    "    a = pile*ITEMS_MX+move-1\n",
-    "    qtable[_st1[0], _st1[1], _st1[2], a] = Alpha * (r + Gamma * q_future_best)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wall time: 6.96 ms\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "nim_qlearn(100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1000 games, DQlearner 586     Random 414\n",
-      "1000 games, DQlearner 592     Random 408\n",
-      "1000 games, DQlearner 649     Random 351\n",
-      "1000 games, DQlearner 701     Random 299\n",
-      "1000 games, DQlearner 730     Random 270\n",
-      "1000 games, DQlearner 716     Random 284\n",
-      "1000 games, DQlearner 696     Random 304\n",
-      "Wall time: 8.56 s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "# See the training size effect\n",
-    "n_train = (3, 10, 100, 1000, 10000, 50000, 100000)\n",
-    "wins = []\n",
-    "for n in n_train:\n",
-    "    nim_qlearn(n)\n",
-    "    a, b = play_games(1000, 'DQlearner', 'Random')\n",
-    "    wins += [a/(a+b)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Function to print the entire set of states\n",
-    "def qtable_log(_fn):\n",
-    "    with open(_fn, 'w') as fout:\n",
+    "def qtable_log(_fn, qtable):\n",
+    "    fn = log_path + _fn\n",
+    "    \n",
+    "    with open(fn, 'w') as fout:\n",
     "        s = 'state'\n",
     "        for a in range(ITEMS_MX*3):\n",
     "            move, pile = a%ITEMS_MX+1, a//ITEMS_MX\n",
@@ -249,35 +161,204 @@
     "                r = qtable[i, j, k, a]\n",
     "                s += ',%.1f' % r\n",
     "            #\n",
-    "            print(s, file=fout)\n",
-    "#\n",
-    "qtable_log('qtable_debug.txt')"
+    "            print(s, file=fout)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### My Agent"
+    "### Default QLearner\n",
+    "\n",
+    "Modified from module 9 notebook for modularity."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Alpha, Gamma, Reward = 1.0, 0.8, 100.0\n",
+    "\n",
+    "def nim_qlearner(_st, qtable, explore):\n",
+    "   \n",
+    "    # pick the best rewarding move, equation 1\n",
+    "    a = np.argmax(qtable[_st[0], _st[1], _st[2]])  # exploitation\n",
+    "    # index is based on move, pile\n",
+    "    move, pile = (a%ITEMS_MX)+1, a//ITEMS_MX\n",
+    "    \n",
+    "    # check if qtable has generated a random but game illegal move - we have not explored there yet\n",
+    "    if move <= 0 or _st[pile] < move:\n",
+    "        move, pile = explore(_st)  # exploration\n",
+    "    #\n",
+    "    return move, pile  # action\n",
+    "\n",
+    "# learn from _n games, randomly played to explore the possible states\n",
+    "def nim_qlearn(_n, qtable, explore):\n",
+    "    # based on max items per pile\n",
+    "    qtable = np.zeros((ITEMS_MX+1, ITEMS_MX+1, ITEMS_MX+1, ITEMS_MX*3), dtype=float)\n",
+    "    # play _n games\n",
+    "    for i in range(_n):\n",
+    "        # first state is starting position\n",
+    "        st1 = init_game()\n",
+    "        while True:  # while game not finished\n",
+    "            # make a random move - exploration\n",
+    "            move, pile = explore(st1)\n",
+    "            st2 = list(st1)\n",
+    "            # make the move\n",
+    "            st2[pile] -= move  # --> last move I made\n",
+    "            if st2 == [0, 0, 0]:  # game ends\n",
+    "                qtable = qtable_update(qtable, Reward, st1, move, pile, 0)  # I won\n",
+    "                break  # new game\n",
+    "            #\n",
+    "            qtable = qtable_update(qtable, 0, st1, move, pile, np.max(qtable[st2[0], st2[1], st2[2]]))\n",
+    "            st1 = st2\n",
+    "            \n",
+    "    return qtable\n",
+    "\n",
+    "# Equation 3 - update the qtable\n",
+    "def qtable_update(qtable, r, _st1, move, pile, q_future_best):\n",
+    "    a = pile*ITEMS_MX+move-1\n",
+    "    qtable[_st1[0], _st1[1], _st1[2], a] = Alpha * (r + Gamma * q_future_best)\n",
+    "    return qtable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-8-2ed3c789538a>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-8-2ed3c789538a>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    def my_nim_qlearner(_st):\u001b[0m\n\u001b[1;37m                             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unexpected EOF while parsing\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 738 ms\n"
      ]
     }
    ],
    "source": [
-    "def my_nim_qlearner(_st):"
+    "%%time\n",
+    "# Train and store\n",
+    "default_qtable = None\n",
+    "default_qtable = nim_qlearn(10000, qtable=default_qtable, explore=nim_random)\n",
+    "default_qlearner = partial(nim_qlearner, qtable=default_qtable, explore=nim_random)\n",
+    "\n",
+    "# add to the Engines dictionary\n",
+    "Engines['DQlearner'] = default_qlearner\n",
+    "\n",
+    "qtable_log('default_qtable.csv', default_qtable)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## My Agents\n",
+    "\n",
+    "Code is adapted from the module 9 notebook."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Guru\n",
+    "\n",
+    "Uses the *nim_guru()* function for exploration instead of just random (there will still be some randomness initially). THis makes a little more sense than leaving things completely up to chance as we know this game is mathematically solved.\n",
+    "\n",
+    "This performs better than the default Qlearner, but if *nim_guru()* is allowed to go first this agent will not win the majority (vice-versa if this agent is allowed the first move versus *nim_guru()* it *will* win the majority)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 686 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# Train and store\n",
+    "guru_qtable = None\n",
+    "guru_qtable = nim_qlearn(10000, qtable=guru_qtable, explore=nim_guru)\n",
+    "guru_qlearner = partial(nim_qlearner, qtable=guru_qtable, explore=nim_guru)\n",
+    "\n",
+    "# add to the Engines dictionary\n",
+    "Engines['guru_Qlearner'] = guru_qlearner\n",
+    "\n",
+    "qtable_log('default_qtable.csv', guru_qtable)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## FIGHT!\n",
+    "\n",
+    "Pit agents against one another."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000 games,        Random vs.        Random, Random Winrate: 50.40%\n",
+      "1000 games,        Random vs.          Guru, Random Winrate: 0.60%\n",
+      "1000 games,        Random vs.     DQlearner, Random Winrate: 30.70%\n",
+      "1000 games,        Random vs. guru_Qlearner, Random Winrate: 1.30%\n",
+      "\n",
+      "\n",
+      "1000 games,          Guru vs.        Random, Guru Winrate: 99.90%\n",
+      "1000 games,          Guru vs.          Guru, Guru Winrate: 93.50%\n",
+      "1000 games,          Guru vs.     DQlearner, Guru Winrate: 99.90%\n",
+      "1000 games,          Guru vs. guru_Qlearner, Guru Winrate: 94.40%\n",
+      "\n",
+      "\n",
+      "1000 games,     DQlearner vs.        Random, DQlearner Winrate: 71.40%\n",
+      "1000 games,     DQlearner vs.          Guru, DQlearner Winrate: 2.60%\n",
+      "1000 games,     DQlearner vs.     DQlearner, DQlearner Winrate: 90.90%\n",
+      "1000 games,     DQlearner vs. guru_Qlearner, DQlearner Winrate: 9.10%\n",
+      "\n",
+      "\n",
+      "1000 games, guru_Qlearner vs.        Random, guru_Qlearner Winrate: 99.80%\n",
+      "1000 games, guru_Qlearner vs.          Guru, guru_Qlearner Winrate: 93.90%\n",
+      "1000 games, guru_Qlearner vs.     DQlearner, guru_Qlearner Winrate: 99.70%\n",
+      "1000 games, guru_Qlearner vs. guru_Qlearner, guru_Qlearner Winrate: 93.60%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# LEEET'S GET READY TO RUUUUUMBLLLLLE!\n",
+    "prev_a = None\n",
+    "for a, b in product(Engines, repeat=2):\n",
+    "    if not prev_a:\n",
+    "        prev_a = a\n",
+    "    elif prev_a != a:\n",
+    "        # breaks our fights up by who goes first\n",
+    "        prev_a = a\n",
+    "        print('\\n')\n",
+    "    \n",
+    "    play_games(1000, a, b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -296,7 +377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
