--- a/McElhenney-Assign09.ipynb
+++ b/McElhenney-Assign09.ipynb
@@ -81,7 +81,7 @@
     "# max number of items per pile\n",
     "ITEMS_MX = 10\n",
     "\n",
-    "# accomadate multiple logs\n",
+    "# Accomadate and organize multiple logs\n",
     "log_path = './logs/'\n",
     "if not path.isdir(log_path):\n",
     "    mkdir(log_path)\n",
@@ -233,7 +233,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 738 ms\n"
+      "Wall time: 759 ms\n"
      ]
     }
    ],
@@ -254,18 +254,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## My Agents\n",
-    "\n",
-    "Code is adapted from the module 9 notebook."
+    "## My Agents"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Guru\n",
+    "### Guru QLearner\n",
     "\n",
-    "Uses the *nim_guru()* function for exploration instead of just random (there will still be some randomness initially). THis makes a little more sense than leaving things completely up to chance as we know this game is mathematically solved.\n",
+    "Uses the *nim_guru()* function for exploration instead of just random (there will still be some randomness initially). This makes a little more sense than leaving things completely up to chance as we know this game is mathematically solved.\n",
     "\n",
     "This performs better than the default Qlearner, but if *nim_guru()* is allowed to go first this agent will not win the majority (vice-versa if this agent is allowed the first move versus *nim_guru()* it *will* win the majority)."
    ]
@@ -279,7 +277,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 686 ms\n"
+      "Wall time: 673 ms\n"
      ]
     }
    ],
@@ -293,7 +291,83 @@
     "# add to the Engines dictionary\n",
     "Engines['guru_Qlearner'] = guru_qlearner\n",
     "\n",
-    "qtable_log('default_qtable.csv', guru_qtable)"
+    "qtable_log('guru_qtable.csv', guru_qtable)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Lossy Q-Learner\n",
+    "\n",
+    "Not a winner. I mean it wins games, but it's no better than *guru_QLeaner* or *nim_guru*. Still trains better if we use *nim_guru* as the exploration function, which is to be expected. *nim_random* does produce okay results.\n",
+    "\n",
+    "This could definitely be tuned a little.\n",
+    "\n",
+    "Code is adapted from the module 9 notebook."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# learn from _n games, randomly played to explore the possible states\n",
+    "def lossy_qlearn(_n, qtable, explore):\n",
+    "    # based on max items per pile\n",
+    "    qtable = np.zeros((ITEMS_MX+1, ITEMS_MX+1, ITEMS_MX+1, ITEMS_MX*3), dtype=float)\n",
+    "    # play _n games\n",
+    "    for i in range(_n):\n",
+    "        # first state is starting position\n",
+    "        st1 = init_game()\n",
+    "        st0 = None\n",
+    "        prev_move, prev_pile = None, None\n",
+    "        while True:  # while game not finished\n",
+    "            # make a random move - exploration\n",
+    "            move, pile = explore(st1)\n",
+    "            st2 = list(st1)\n",
+    "            # make the move\n",
+    "            st2[pile] -= move  # --> last move I made\n",
+    "            if st2 == [0, 0, 0]:  # game ends\n",
+    "                qtable = qtable_update(qtable, Reward, st1, move, pile, 0)  # I won\n",
+    "                qtable = qtable_update(qtable, 0.5*np.max(qtable[st1]), st0, prev_move, prev_pile, 0) # I lost\n",
+    "                break  # new game\n",
+    "            #\n",
+    "            qtable = qtable_update(qtable, 0, st1, move, pile, np.max(qtable[st2[0], st2[1], st2[2]]))\n",
+    "            \n",
+    "            st0 = st1\n",
+    "            st1 = st2\n",
+    "            prev_move = move\n",
+    "            prev_pile = pile\n",
+    "            \n",
+    "    return qtable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 813 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# Train and store\n",
+    "lossy_qtable = None\n",
+    "lossy_qtable = lossy_qlearn(10000, qtable=lossy_qtable, explore=nim_guru)\n",
+    "lossy_qlearner = partial(nim_qlearner, qtable=lossy_qtable, explore=nim_guru)\n",
+    "\n",
+    "# add to the Engines dictionary\n",
+    "Engines['lossy_Qlearner'] = lossy_qlearner\n",
+    "\n",
+    "qtable_log('lossy_qtable.csv', lossy_qtable)"
    ]
   },
   {
@@ -307,35 +381,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1000 games,        Random vs.        Random, Random Winrate: 50.40%\n",
-      "1000 games,        Random vs.          Guru, Random Winrate: 0.60%\n",
-      "1000 games,        Random vs.     DQlearner, Random Winrate: 30.70%\n",
-      "1000 games,        Random vs. guru_Qlearner, Random Winrate: 1.30%\n",
+      "1000 games,        Random vs.        Random, Random Winrate: 51.50%\n",
+      "1000 games,        Random vs.          Guru, Random Winrate: 0.50%\n",
+      "1000 games,        Random vs.     DQlearner, Random Winrate: 30.40%\n",
+      "1000 games,        Random vs. guru_Qlearner, Random Winrate: 0.70%\n",
+      "1000 games,        Random vs. lossy_Qlearner, Random Winrate: 1.20%\n",
       "\n",
       "\n",
       "1000 games,          Guru vs.        Random, Guru Winrate: 99.90%\n",
-      "1000 games,          Guru vs.          Guru, Guru Winrate: 93.50%\n",
-      "1000 games,          Guru vs.     DQlearner, Guru Winrate: 99.90%\n",
-      "1000 games,          Guru vs. guru_Qlearner, Guru Winrate: 94.40%\n",
+      "1000 games,          Guru vs.          Guru, Guru Winrate: 94.70%\n",
+      "1000 games,          Guru vs.     DQlearner, Guru Winrate: 100.00%\n",
+      "1000 games,          Guru vs. guru_Qlearner, Guru Winrate: 95.20%\n",
+      "1000 games,          Guru vs. lossy_Qlearner, Guru Winrate: 94.00%\n",
       "\n",
       "\n",
-      "1000 games,     DQlearner vs.        Random, DQlearner Winrate: 71.40%\n",
-      "1000 games,     DQlearner vs.          Guru, DQlearner Winrate: 2.60%\n",
-      "1000 games,     DQlearner vs.     DQlearner, DQlearner Winrate: 90.90%\n",
-      "1000 games,     DQlearner vs. guru_Qlearner, DQlearner Winrate: 9.10%\n",
+      "1000 games,     DQlearner vs.        Random, DQlearner Winrate: 73.60%\n",
+      "1000 games,     DQlearner vs.          Guru, DQlearner Winrate: 2.70%\n",
+      "1000 games,     DQlearner vs.     DQlearner, DQlearner Winrate: 87.30%\n",
+      "1000 games,     DQlearner vs. guru_Qlearner, DQlearner Winrate: 7.70%\n",
+      "1000 games,     DQlearner vs. lossy_Qlearner, DQlearner Winrate: 10.30%\n",
       "\n",
       "\n",
-      "1000 games, guru_Qlearner vs.        Random, guru_Qlearner Winrate: 99.80%\n",
-      "1000 games, guru_Qlearner vs.          Guru, guru_Qlearner Winrate: 93.90%\n",
+      "1000 games, guru_Qlearner vs.        Random, guru_Qlearner Winrate: 99.90%\n",
+      "1000 games, guru_Qlearner vs.          Guru, guru_Qlearner Winrate: 95.00%\n",
       "1000 games, guru_Qlearner vs.     DQlearner, guru_Qlearner Winrate: 99.70%\n",
-      "1000 games, guru_Qlearner vs. guru_Qlearner, guru_Qlearner Winrate: 93.60%\n"
+      "1000 games, guru_Qlearner vs. guru_Qlearner, guru_Qlearner Winrate: 93.90%\n",
+      "1000 games, guru_Qlearner vs. lossy_Qlearner, guru_Qlearner Winrate: 93.00%\n",
+      "\n",
+      "\n",
+      "1000 games, lossy_Qlearner vs.        Random, lossy_Qlearner Winrate: 99.70%\n",
+      "1000 games, lossy_Qlearner vs.          Guru, lossy_Qlearner Winrate: 93.50%\n",
+      "1000 games, lossy_Qlearner vs.     DQlearner, lossy_Qlearner Winrate: 100.00%\n",
+      "1000 games, lossy_Qlearner vs. guru_Qlearner, lossy_Qlearner Winrate: 94.30%\n",
+      "1000 games, lossy_Qlearner vs. lossy_Qlearner, lossy_Qlearner Winrate: 94.80%\n"
      ]
     }
    ],
